<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="56dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/userAvatarIv"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/image_gallery" />

        <TextView
            android:id="@+id/userAvatarTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="@string/upload_title_txt"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/fullnameEdt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/fullname_edt"
            android:background="@drawable/input"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/emailEdt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email_edt"
            android:background="@drawable/input"
            android:padding="10dp" />

        <EditText
            android:id="@+id/passwordEdt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/password_edt"
            android:background="@drawable/input"
            android:inputType="textPassword"
            android:padding="10dp" />

        <EditText
            android:id="@+id/confirmPasswordEdt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/confirm_password_edt"
            android:background="@drawable/input"
            android:inputType="textPassword"
            android:padding="10dp" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_btn"
            android:text="@string/register_btn"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>